OCaml/mini-c/tests/typing/bad/testfile-redef-6.c

struct S { int a; };
int f() {}
struct S* f() {}
int main() {}
